# super_simple_stocks

./: .gitignore  README.md  demo.py  pyproject.toml
super_simple_stocks/: beverage_exchange.py  exchange.py  model.py  trade_repository.py  utils.py
tests/: test_beverage_exchange.py  test_data.csv  test_exchange.py  test_model.py  test_trade_repository.py
